# layouter

./: CMakeLists.txt  README.md  package.xml  record.sh
doc/: cheatsheet  instructions
gcode/: arc.nc  asl_logo.nc  asl_logo_large.nc  asl_logo_small.nc  circle.nc  line.nc  zigzag.nc
launch/: config_msf.yaml  core.launch  marker_core.launch  marker_ouzel.launch  marker_ouzel_base_station.launch  marker_test.launch  vehicle.yaml
msg/: ControlPlate.msg  Draw.msg  StatePlate.msg
scripts/: camera.py  drawer.py  main.py  planner.py  plate.py  preplanner.py  sim_circ.py  wheels.py
srv/: Home.srv  WheelsStart.srv
stuff/aruco/: charuco.ai  charuco_6x6_15mm.ai  charuco_calib.py  charuco_eval.py  charuco_outline.dxf  outline.dxf
stuff/aruco/scripts/: capture.py  device.py  display.py  format.py  launch.sh  main.py
stuff/marker_servo/: marker_servo.ino
