<?xml version="1.0"?>
<package format="2">
  <name>marker</name>
  <version>0.0.0</version>
  <description>Ceiling marker addon to OMAV drone</description>

  <maintainer email="mruggia@ethz.ch">Marco Ruggia</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rospy</exec_depend>

</package>
